--- a/public/css/devaria.css
+++ b/public/css/devaria.css
@@ -1,6 +1,6 @@
 /* Estilos globais do site */
 html {
-    height: 100px;
+    height: 100%;
 }
 
 body {
@@ -8,4 +8,33 @@ body {
     font-family: sans-serif;
     color: #ffffff;
     margin: 0;
+}
+
+.title {
+    padding: 0 20px;
+    font-size: 1.75em;
+    text-transform: uppercase;
+}
+
+h1.title {
+    margin: 40px auto 20px;
+}
+
+.text-justify {
+    text-align: justify;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.margin-horizontal-20-px {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+@media screen and (min-width: 992px) {
+    .w-50pct-desktop {
+        width: 50% !important;
+    }
 }
